Updated styles.css spacing issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,14 +22,14 @@ color: #e8198b;
     text-decoration: none;
     background: linear-gradient(to top, #e8198b 0%, #c7eafd 100%);
     color: black;
-    margin: 0 30px;
-    padding: 25px;
-    border-radius: 5px;
-    font-size: 18px;
+    margin: 0 20px;
+    padding: 10px;
+    border-radius: 30px;
+    font-size: 16px;
     font-family: Arial, Helvetica, sans-serif;
     flex: 1;
     text-align: center;
-    max-width: (50% - 10px);
+    max-width: (10% - 10px);
 }
 
 .body-links:hover {
